--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <FrameLayout
-        android:layout_width="413dp"
+        android:layout_width="match_parent"
         android:layout_height="54dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -13,6 +13,7 @@
 
         <SearchView
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:background="#9A6C6C" />
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
