--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,20 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:layout="@layout/fragment_search" />
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerView4"
+        android:name="com.example.biblioteca.Home_Fragment"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.47"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView"
+        app:layout_constraintVertical_bias="0.247" />
+
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#9A6C6C"
@@ -50,7 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="0dp"
             android:layout_weight="1"
-            android:backgroundTint="#9A6C6C"
+            android:backgroundTint="@color/home"
             app:srcCompat="@drawable/senza_titolo_1" />
 
     </LinearLayout>
