--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -7,15 +7,32 @@
     tools:context="FragmentSearch">
 
     <FrameLayout
+        android:id="@+id/frameS"
         android:layout_width="match_parent"
         android:layout_height="54dp"
+        android:background="@drawable/shape"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <SearchView
+        <EditText
+            android:id="@+id/editTextText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#9A6C6C" />
+            android:layout_marginLeft="2dp"
+            android:background="#00000000"
+            android:ems="10"
+            android:hint="Search"
+
+            android:inputType="text" />
+
+        <ImageButton
+            android:id="@+id/imageButton2"
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:layout_marginRight="1dp"
+            android:background="#00000000"
+            android:src="@android:drawable/ic_menu_search" />
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
