--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         android:name="com.example.biblioteca.Home_Fragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="@color/home"
         app:layout_constraintBottom_toTopOf="@id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.47"
@@ -33,7 +34,7 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/shape"
+        android:background="@color/home"
         android:foregroundTint="#9A6C6C"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
