--- a/app/src/main/res/layout/info_layout.xml
+++ b/app/src/main/res/layout/info_layout.xml
@@ -74,7 +74,7 @@
                     app:srcCompat="@drawable/maps_icon" />
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/buttonMaps"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
