--- a/app/src/main/res/layout/profile_layout.xml
+++ b/app/src/main/res/layout/profile_layout.xml
@@ -26,7 +26,7 @@
                 tools:src="@tools:sample/avatars" />
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/nome"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
@@ -35,7 +35,7 @@
                 android:textStyle="bold|italic" />
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/Cognome"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
@@ -44,7 +44,7 @@
                 android:textStyle="bold|italic" />
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/point"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
@@ -60,15 +60,10 @@
                 tools:layout_editor_absoluteX="142dp"
                 tools:layout_editor_absoluteY="689dp" />
 
-            <Button
-                android:id="@+id/loginButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Login" />
         </LinearLayout>
 
         <Button
-            android:id="@+id/button7"
+            android:id="@+id/logoutButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Logout"
