--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Biblioteca" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Biblioteca" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:statusBarColor">@color/home</item>
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
     <style name="Theme.Biblioteca" parent="Base.Theme.Biblioteca" />
+
+
+
 </resources>
+
+
