--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,7 +69,7 @@
             app:srcCompat="@drawable/senza_titolo_1" />
 
         <ImageButton
-            android:id="@+id/debug_backstack"
+            android:id="@+id/tasto_debug_backstack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="0dp"
