--- a/app/src/main/res/drawable/green_button.xml
+++ b/app/src/main/res/drawable/green_button.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
 
-      <solid  android:color="#900C7C1B" />
+      <solid  android:color="@color/text" />
 
 
     <corners android:radius="20dp" /> <!-- Opzionale: bordi arrotondati -->
