--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/home"
+        android:background="@color/black"
         android:foregroundTint="#9A6C6C"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -44,29 +44,29 @@
         <ImageButton
             android:id="@+id/tastoHome"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginTop="0dp"
             android:layout_weight="1"
-            android:backgroundTint="#9A6C6C"
-            app:srcCompat="@drawable/home_icon" />
+            android:backgroundTint="@color/black"
+            app:srcCompat="@drawable/icons8_home_24" />
 
         <ImageButton
             android:id="@+id/tastoUser"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="73dp"
+            android:layout_height="match_parent"
             android:layout_marginTop="0dp"
             android:layout_weight="1"
-            android:backgroundTint="#9A6C6C"
+            android:backgroundTint="@color/black"
             app:srcCompat="@drawable/user_icon" />
 
         <ImageButton
             android:id="@+id/tastoInfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="68dp"
+            android:layout_height="match_parent"
             android:layout_marginTop="0dp"
             android:layout_weight="1"
-            android:backgroundTint="@color/home"
-            app:srcCompat="@drawable/senza_titolo_1" />
+            android:backgroundTint="@color/black"
+            app:srcCompat="@drawable/senza_titolo_2" />
 
         <ImageButton
             android:id="@+id/debug_backstack"
@@ -74,7 +74,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="0dp"
             android:layout_weight="1"
-            android:backgroundTint="@color/home"
+            android:backgroundTint="@color/black"
             app:srcCompat="@android:drawable/ic_menu_help" />
 
     </LinearLayout>
