--- a/app/src/main/res/layout/profile_layout.xml
+++ b/app/src/main/res/layout/profile_layout.xml
@@ -7,7 +7,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/home">
 
         <LinearLayout
             android:id="@+id/linearLayout2"
@@ -28,30 +29,37 @@
                 android:id="@+id/nome"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="monospace"
                 android:text="Nome"
+                android:textColor="@color/white"
                 android:textSize="24sp"
-                android:textStyle="bold|italic" />
+                android:textStyle="italic" />
 
             <TextView
                 android:id="@+id/Cognome"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="monospace"
                 android:text="Cognome"
+                android:textColor="@color/white"
                 android:textSize="24sp"
-                android:textStyle="bold|italic" />
+                android:textStyle="italic" />
 
             <TextView
                 android:id="@+id/point"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="monospace"
                 android:text="point"
+                android:textColor="@color/white"
                 android:textSize="24sp"
-                android:textStyle="bold|italic" />
+                android:textStyle="italic" />
 
             <Button
                 android:id="@+id/button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="monospace"
                 android:text="qr"
                 tools:layout_editor_absoluteX="142dp"
                 tools:layout_editor_absoluteY="689dp" />
@@ -63,7 +71,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/red_button"
+            android:fontFamily="monospace"
             android:text="Logout"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="@+id/linearLayout2" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
