--- a/app/src/main/res/layout/cronologia_layout.xml
+++ b/app/src/main/res/layout/cronologia_layout.xml
@@ -3,10 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    tools:context=".Cronologia_Fragment"
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/recyclerViewCrono"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:padding="8dp"
