--- a/app/src/main/res/layout/menu_layout.xml
+++ b/app/src/main/res/layout/menu_layout.xml
@@ -1,33 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
     <Button
         android:id="@+id/buttonCronologia"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Cronologia"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginVertical="5dp"
+        android:background="@drawable/green_button"
+        android:text="Cronologia" />
 
     <Button
         android:id="@+id/buttonPrestiti"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Prestiti in corso"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonCronologia" />
+        android:layout_marginVertical="5dp"
+        android:layout_marginTop="0dp"
+        android:background="@drawable/green_button"
+        android:text="Prestiti in corso" />
+
+    <Button
+        android:id="@+id/buttonModificaDati"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="5dp"
+        android:background="@drawable/green_button"
+        android:text="Modifica dati" />
+
+    <Button
+        android:id="@+id/modificaPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="5dp"
+        android:background="@drawable/green_button"
+        android:text="Modifica password" />
 
     <Button
         android:id="@+id/admin"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Admin"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonPrestiti" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_marginVertical="5dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/green_button"
+        android:text="Admin" />
+
+
+</LinearLayout>
