--- a/app/src/main/res/layout/consegna_layout.xml
+++ b/app/src/main/res/layout/consegna_layout.xml
@@ -125,15 +125,16 @@
                 android:id="@+id/codice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:backgroundTint="#EFCF25"
                 android:ems="10"
                 android:hint="codice"
                 android:inputType="text"
                 android:textColor="#FFFFFF"
-                android:textColorHint="#656363"
-                app:layout_constraintBottom_toTopOf="@+id/buttonConsegna"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/buttonVota" />
+                android:textColorHighlight="#FFDF36"
+                android:textColorHint="#8A8686"
+                app:layout_constraintBottom_toBottomOf="@+id/buttonConsegna"
+                app:layout_constraintEnd_toStartOf="@+id/buttonConsegna"
+                app:layout_constraintStart_toStartOf="parent" />
 
             <Button
                 android:id="@+id/buttonConsegna"
