--- a/app/src/main/res/layout/prenotazioni_layout.xml
+++ b/app/src/main/res/layout/prenotazioni_layout.xml
@@ -10,6 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="34dp"
         android:textColor="#FBE236"
+        android:textSize="20sp"
+        android:typeface="monospace"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
