--- a/app/src/main/res/layout/da_consegnare.xml
+++ b/app/src/main/res/layout/da_consegnare.xml
@@ -5,6 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/ListaVuotaText"
+        android:layout_width="wrap_content"
+        android:layout_height="34dp"
+        android:textColor="#FBE236"
+        android:textSize="20sp"
+        android:typeface="monospace"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/recycleBibliotecario" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleBibliotecario"
         android:layout_width="match_parent"
