--- a/app/src/main/res/layout/mod_dati.xml
+++ b/app/src/main/res/layout/mod_dati.xml
@@ -1,49 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".user.ModDati_Fragment"
-    android:orientation="vertical">
+    android:backgroundTint="#FBE236"
+    android:orientation="vertical"
+    tools:context=".user.ModDati_Fragment">
+
     <ImageView
         android:id="@+id/profile_image_top"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/generic_user"
-        android:scaleType="centerCrop"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="16dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/generic_user" />
+
     <EditText
         android:id="@+id/campoPass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:backgroundTint="#FBE236"
         android:hint="Password"
         android:padding="8dp"
         android:textColor="#FFFFFF"
-        android:textColorHint="#9C9C9C" />
+        android:textColorHint="#9C9C9C"
+        android:typeface="monospace" />
+
     <EditText
         android:id="@+id/campoNuovoNome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:backgroundTint="#FBE236"
         android:hint="Nuovo nome"
         android:padding="8dp"
         android:textColor="#FFFFFF"
-        android:textColorHint="#9C9C9C" />
+        android:textColorHint="#9C9C9C"
+        android:typeface="monospace" />
+
     <EditText
         android:id="@+id/campoNuovoCognome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:backgroundTint="#FBE236"
         android:hint="Nuovo cognome"
         android:padding="8dp"
         android:textColor="#FFFFFF"
-        android:textColorHint="#9C9C9C" />
+        android:textColorHint="#9C9C9C"
+        android:typeface="monospace" />
+
     <Button
         android:id="@+id/button_conferma"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/green_button"
         android:padding="12dp"
-        android:text="Conferma" />
+        android:text="Conferma"
+        android:typeface="monospace" />
 </LinearLayout>
