--- a/app/src/main/res/layout/mod_password.xml
+++ b/app/src/main/res/layout/mod_password.xml
@@ -20,36 +20,44 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:backgroundTint="#FBE236"
         android:hint="Vecchia Password"
         android:padding="8dp"
         android:textColor="#FFFFFF"
-        android:textColorHint="#9C9C9C" />
+        android:textColorHint="#9C9C9C"
+        android:typeface="monospace" />
 
     <EditText
         android:id="@+id/campoNuovaPass1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:backgroundTint="#FBE236"
         android:hint="Nuova password"
         android:padding="8dp"
         android:textColor="#FFFFFF"
-        android:textColorHint="#9C9C9C" />
+        android:textColorHint="#9C9C9C"
+        android:typeface="monospace" />
 
     <EditText
         android:id="@+id/campoNuovaPass2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:backgroundTint="#FBE236"
         android:hint="Conferma Password"
         android:padding="8dp"
         android:textColor="#FFFFFF"
-        android:textColorHint="#9C9C9C" />
+        android:textColorHint="#9C9C9C"
+        android:typeface="monospace" />
 
     <Button
         android:id="@+id/button_confermaNuovaPass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/green_button"
         android:padding="12dp"
-        android:text="Conferma" />
+        android:text="Conferma"
+        android:typeface="monospace" />
 
 </LinearLayout>
