--- a/app/src/main/res/layout/mod_password.xml
+++ b/app/src/main/res/layout/mod_password.xml
@@ -25,7 +25,8 @@
         android:padding="8dp"
         android:textColor="#FFFFFF"
         android:textColorHint="#9C9C9C"
-        android:typeface="monospace" />
+        android:typeface="monospace"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
         android:id="@+id/campoNuovaPass1"
@@ -37,7 +38,8 @@
         android:padding="8dp"
         android:textColor="#FFFFFF"
         android:textColorHint="#9C9C9C"
-        android:typeface="monospace" />
+        android:typeface="monospace"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
         android:id="@+id/campoNuovaPass2"
@@ -49,7 +51,8 @@
         android:padding="8dp"
         android:textColor="#FFFFFF"
         android:textColorHint="#9C9C9C"
-        android:typeface="monospace" />
+        android:typeface="monospace"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <Button
         android:id="@+id/button_confermaNuovaPass"
